fix spacing and popup size when filtered, a single item was taking too much space and showing a scroll bar

--- a/src/app/components/shell-ui/tags-filter-list-tag-checkbox.css
+++ b/src/app/components/shell-ui/tags-filter-list-tag-checkbox.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: 24px;
     white-space: nowrap;
+    padding-right: 6px;
 }
 .container:hover{
     background: #4091c9;
