--- a/src/app/components/shell-ui/tags-filter-list.css
+++ b/src/app/components/shell-ui/tags-filter-list.css
@@ -1,14 +1,14 @@
 .container{
     position: absolute;
-    min-height: 50px;
+    min-height: 24px;
     max-height: 240px;
     min-width: 80px;
-    overflow-y: scroll;
+    overflow-y: auto;
     color: #1f1f1f;
     border: 1px solid #666666;
     box-shadow: 0px 8px 20px 0px rgba(51,51,51,0.35);
     background: #ebebeb;
-    z-index: 60;
+    z-index: 60;    
 }
 .openUp{
     bottom: 21px;
